# Interactive-TSP-Solver

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json
.devcontainer/: devcontainer.json
backend/: CMakeLists.txt  Dockerfile  Dockerfile.dev
backend/src/: main.cpp  tsp_solver.cpp  tsp_solver.hpp
frontend/: Dockerfile  package-lock.json
frontend/src/app/: app.html  app.ts
frontend/src/app/components/tsp-map/: tsp-map.html  tsp-map.scss  tsp-map.ts
frontend/src/app/models/: Response.ts
frontend/src/app/services/: solver.spec.ts  solver.ts
frontend/src/models/: city.model.ts
